[gd_scene load_steps=8 format=3 uid="uid://v10bkajsfmfq"]

[ext_resource type="PackedScene" uid="uid://kta32xxl83pv" path="res://Scenes/Walls/WallBase.tscn" id="1_y1bso"]
[ext_resource type="Texture2D" uid="uid://dea7ufsp50oqv" path="res://Assets/wall_1/door_closed.png" id="2_usut5"]
[ext_resource type="Script" uid="uid://dml8wfcru8h2m" path="res://Scenes/Walls/Wall1/Wall1.gd" id="2_xrt8l"]
[ext_resource type="Texture2D" uid="uid://b6nh03ar0u05g" path="res://Assets/wall_1/door_open.png" id="3_liopc"]
[ext_resource type="Texture2D" uid="uid://bdhhe0fiuxcbi" path="res://Assets/wall_1/sign.png" id="4_5coce"]
[ext_resource type="PackedScene" uid="uid://cor7ab8s5e8wi" path="res://Scenes/InteractWindows/Wall1/SignWindow.tscn" id="6_bfm03"]
[ext_resource type="PackedScene" uid="uid://djfewppssc7bg" path="res://Scenes/InteractWindows/Wall1/TextWindow.tscn" id="7_xrt8l"]

[node name="Wall1" instance=ExtResource("1_y1bso")]
script = ExtResource("2_xrt8l")
sign_password = Array[int]([0, 5, 2, 4, 0, 9, 2, 0])
wall_number = 1

[node name="TextTrigger" type="TextureButton" parent="." index="3"]
layout_mode = 0
offset_left = 660.0
offset_top = 674.0
offset_right = 847.0
offset_bottom = 905.0
mouse_default_cursor_shape = 2

[node name="ColorRect" type="ColorRect" parent="TextTrigger" index="0"]
layout_mode = 0
offset_left = 31.0
offset_top = 22.0
offset_right = 40.0
offset_bottom = 211.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="TextTrigger" index="1"]
layout_mode = 0
offset_left = 45.0
offset_top = 22.0
offset_right = 54.0
offset_bottom = 211.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="TextTrigger" index="2"]
layout_mode = 0
offset_left = 133.0
offset_top = 22.0
offset_right = 142.0
offset_bottom = 211.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="TextTrigger" index="3"]
layout_mode = 0
offset_left = 147.0
offset_top = 22.0
offset_right = 156.0
offset_bottom = 211.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Door" type="Control" parent="." index="4"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DoorClosed" type="TextureButton" parent="Door" index="0"]
layout_mode = 0
offset_left = 214.0
offset_top = 233.0
offset_right = 534.0
offset_bottom = 931.0
texture_normal = ExtResource("2_usut5")

[node name="DoorOpen" type="TextureRect" parent="Door" index="1"]
visible = false
layout_mode = 0
offset_left = -102.0
offset_top = 233.0
offset_right = 534.0
offset_bottom = 931.0
mouse_filter = 2
texture = ExtResource("3_liopc")

[node name="WallSign" type="TextureButton" parent="." index="5"]
layout_mode = 0
offset_left = 623.0
offset_top = 439.0
offset_right = 879.0
offset_bottom = 580.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_5coce")

[node name="SignWindow" parent="Windows" index="0" instance=ExtResource("6_bfm03")]
visible = false
layout_mode = 1

[node name="TextWindow" parent="Windows" index="1" instance=ExtResource("7_xrt8l")]
visible = false
layout_mode = 1

[connection signal="pressed" from="TextTrigger" to="." method="_on_text_trigger_pressed"]
[connection signal="pressed" from="Door/DoorClosed" to="." method="_on_door_closed_pressed"]
[connection signal="pressed" from="WallSign" to="." method="_on_wall_sign_pressed"]
